TODO
* fix message filename retrieval, registry bering read wrong ?
* implement libevtx_xml_tag_get_attribute_by_utf8_path (and utf16 equivalent) ?
* implement libevtx_xml_tag_get_element_by_utf8_path (and utf16 equivalent) ?
* store name hash in value identifier
* deal with corruption scenario
* deal with trailing empty data ?
* remove libevtx_libfguid.h once libfvalue wraps the format flags
* evtxeport:
  - rewrite using evtexport
  - export format: xml
  - non-xml export format use evtexport like approach (add functions to get
    specific event data)
* add recovery scan
* add debug function for binary XML token types
* codepage support
* flag internally if the file is corrupted (CRC mismatch)

Recovery:
* scan for records in chunk free space

20120429
* worked on split value support
* worked on character and entity reference support

20120428
* updated dependencies
* worked on PI support

20120423
* fixes for deployment

20120422
* libfvalue update
* improvement for reading and converting to XML

20120419
* code clean up
* improvements for distribution
* improvements for non-debug build

20120418
* worked on libfvalue - format passing

20120417
* added libexe, libregf, libwrc, libcdirectory
* updated libfdatetime
* worked on libfvalue

20120415
* worked on libfvalue to copy to string functions
* code now merges <File></File> to <File/>

20120414
* worked on API
* worked on parsing binary XML
  - added support for array types

20120413
* worked on evtxexport
* worked on API

20120410
* worked on API

20120409
* updated dependencies
* worked on storing XML tags and attributes

20120312
* worked on parsing binary XML

20120311
* worked on parsing binary XML

20120310
* worked on reading events

20120307
* worked on reading chunks
* added CRC32 support

20120306
* 2012 update

20111101
* updated configure.ac and m4 files
* updated spec and pc file
* updated README files
* updated common, libcstring, libsystem, libuna, libbfio, libfdatetime,
  libfvalue