@@ -1,4 +1,7 @@
 TODO
+* recovery: pass what type of chunk is being read
+* recovery: pass flag to binary xml parsing to ignore parsing errors ?
+  or make this the default behavior
 * fix message filename retrieval, registry bering read wrong ?
 * implement libevtx_xml_tag_get_attribute_by_utf8_path (and utf16 equivalent) ?
 * implement libevtx_xml_tag_get_element_by_utf8_path (and utf16 equivalent) ?
@@ -18,6 +21,9 @@ TODO
 
 Recovery:
 * scan for records in chunk free space
+
+20120430
+* worked on record recovery
 
 20120429
 * worked on split value support
